Wed May 12 11:39:10 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: test all IPPROTO_* constants for recent Win32
	  SDK.

Tue May 11 23:07:22 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test IPPROTO_IP and IPPROTO_IPV6 constants.

	* ext/socket/mkconstants.rb: define macros for enum.

	  [ruby-dev:38849]

Wed May 12 09:21:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_initialize_m): fix wrong index for the lang
	  option's value 'N'. reported by Masaya TARUI via IRC.

Tue May 11 21:53:18 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rake/test_task_arguments.rb: makes ENV empty during tests
	  because ENV may change the behavior of Rake::TaskArguments.
	  [ruby-core:29984]

Tue May 11 09:57:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (rb_vm_get_sourceline): add prototype.

Tue May 11 09:53:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/parser.c (PSYCH_TRANSCODE): get rid of bare use of gcc
	  extension.

Mon May 10 02:58:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_compile_each), vm_insnhelper.c (vm_invoke_block,
	  vm_throw): allow "return" and "yield" even in singleton class
	  definition.  based on a patch from wanabe <s.wanabe AT gmail.com>
	  for "return".  [ruby-core:21379] [ruby-dev:40975]

	* insns.def (defineclass): ditto (straightforwardly push block ptr,
	  instead of dfp ptr with special flag).

	* vm_core.h (RUBY_VM_CLASS_SPECIAL_P): ditto (no longer needed).

	* proc.c (proc_new): ditto (remove handling for special flag).

	* bootstraptest/test_jump.rb: add tests for above.

Sun May 16 14:41:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (dln_find.o): fix dependency.

Tue May 11 01:20:43 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): Return strings encoded as
	  Encoding.default_internal if set.

Mon May 10 06:59:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>
